--- a/sass/components/_picture.scss
+++ b/sass/components/_picture.scss
@@ -2,7 +2,7 @@
     margin: 0;
     /*position: absolute;*/
     & img {
-        /*object-fit: cover;*/
+        object-fit: cover;
         width: 100%;
         max-height: 350px;
     }
