--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto|Shrikhand');
+
 @import "./utils/variables";
 @import "./utils/functions";
 @import "./utils/mixins";
